force-app/main/default/objects/Loop__DDP__c/Loop__DDP__c.object-meta.xml
<CustomObject>
    <customHelpPage>Loop__aboutloop</customHelpPage>
    <description>Nintex DocGen Packages</description>
    <label>DocGen Package</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocGen Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>