force-app/main/default/objects/Loop__DDP__c/fields/Loop__Case_Articles__c.field-meta.xml
<CustomField>
    <fullName>Loop__Case_Articles__c</fullName>
    <formula>IF( ISBLANK( Loop__KA_Required__c ) , &quot;&quot; , &quot;Required: &quot; ) &amp; 
SUBSTITUTE( SUBSTITUTE( Loop__KA_Required__c , &quot;,&quot; , &quot;, &quot; ) , &quot;__kav&quot; , &quot;&quot; ) &amp; 

IF( OR( ISBLANK( Loop__KA_Required__c ) , ISBLANK( Loop__KA_Optional__c ) ) , &quot;&quot; , BR() ) &amp; 
IF( ISBLANK( Loop__KA_Optional__c ) , &quot;&quot; , &quot;Optional: &quot; ) &amp; 
SUBSTITUTE( SUBSTITUTE( Loop__KA_Optional__c , &quot;,&quot; , &quot;, &quot; ) , &quot;__kav&quot; , &quot;&quot; ) &amp; 

IF( AND( NOT( ISBLANK( Loop__KA_Separate__c ) ) , NOT( AND( ISBLANK( Loop__KA_Required__c ) , ISBLANK( Loop__KA_Optional__c ) ) ) ) , BR() , &quot;&quot; ) &amp; 
IF( ISBLANK( Loop__KA_Separate__c ) , &quot;&quot; , &quot;Separate Optional: &quot; ) &amp; 
SUBSTITUTE( SUBSTITUTE( Loop__KA_Separate__c , &quot;,&quot; , &quot;, &quot; ) , &quot;__kav&quot; , &quot;&quot; ) &amp; 

IF( AND( ISBLANK( Loop__KA_Required__c ) , ISBLANK( Loop__KA_Optional__c ) , ISBLANK( Loop__KA_Separate__c ) ) , &quot;None&quot; , BR() ) &amp; 
&quot; [&quot; &amp; HYPERLINK( &quot;/apex/loop__ddpEdit?type=article&amp;ddpId=&quot; &amp; Id , &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot;</formula>
    <label>Case Articles</label>
    <type>Text</type>
</CustomField>