force-app/main/default/objects/Loop__DDP__c/fields/Loop__Default_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Loop__Default_Email_Template__c</fullName>
    <formula>IF(Loop__Email_Template__c =&quot;&quot;, HYPERLINK(&quot;/apex/loop__selectemailtemplate?ddpId=&quot; &amp; Id, IMAGE(&quot;/img/icon/documents16.png&quot;, &quot;Change&quot;) &amp; &quot; Select Email Template&quot;,&quot;_self&quot;), HYPERLINK(&quot;/&quot; &amp; Loop__Email_Template__c &amp; &quot;/s?id=&quot; &amp; Loop__Email_Template__c &amp; &quot;&amp;previewMode=1&quot;, IMAGE(&quot;/img/icon/mail16.png&quot;, &quot;Preview&quot;) &amp; &quot; Preview&quot;,&quot;_blank&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/apex/loop__selectemailtemplate?ddpId=&quot; &amp; Id, IMAGE(&quot;/img/icon/documents16.png&quot;, &quot;Change&quot;) &amp; &quot; Change&quot;,&quot;_self&quot;)&amp; &quot; &quot; &amp; HYPERLINK(&quot;/apex/loop__selectemailtemplate?ddpId=&quot; &amp; Id &amp; &quot;&amp;ic=None&quot;, &quot; None&quot;,&quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Email Template</label>
    <type>Text</type>
</CustomField>