force-app/main/default/objects/Loop__DDP__c/fields/Loop__Description__c.field-meta.xml
<CustomField>
    <fullName>Loop__Description__c</fullName>
    <inlineHelpText>For internal use.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>