force-app/main/default/objects/Loop__DDP__c/fields/Loop__Enclosure_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Loop__Enclosure_Folder_Id__c</fullName>
    <label>Enclosure Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>