force-app/main/default/objects/Loop__DDP__c/fields/Loop__Exclude_Email__c.field-meta.xml
<CustomField>
    <fullName>Loop__Exclude_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If selected, the user cannot send this DocGen Package to a Salesforce email template.</inlineHelpText>
    <label>Exclude Email Delivery</label>
    <type>Checkbox</type>
</CustomField>