force-app/main/default/objects/Loop__DDP__c/fields/Loop__Frequency__c.field-meta.xml
<CustomField>
    <fullName>Loop__Frequency__c</fullName>
    <inlineHelpText>Once activated, your report will be emailed out at this frequency.</inlineHelpText>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>