force-app/main/default/objects/Loop__DDP__c/fields/Loop__Limit_Availability__c.field-meta.xml
<CustomField>
    <fullName>Loop__Limit_Availability__c</fullName>
    <inlineHelpText>If no options are selected, the DocGen Package will be available for all deployment types.</inlineHelpText>
    <label>Limit Availability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mass Only</fullName>
            </value>
            <value>
                <fullName>Non Mass Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>