force-app/main/default/objects/Loop__DDP__c/fields/Loop__Mass_Email_Report_to__c.field-meta.xml
<CustomField>
    <fullName>Loop__Mass_Email_Report_to__c</fullName>
    <formula>IF( ISBLANK( Loop__MassEmailReport__c ) , &quot;None&quot; , HYPERLINK( &quot;/&quot; &amp; Loop__MassEmailReport__c , IF( ISBLANK( Loop__Mass_Email_Report_Name__c ) , Loop__MassEmailReport__c , Loop__Mass_Email_Report_Name__c ) ) ) &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpEdit?type=massreport&amp;ddpId=&quot; &amp; Id, &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a Salesforce Report. The first column (# zero) of the report must be the lead, contact, or user id that the report will be emailed to. Each consecutive column can be used in a report filter as !param# where # is the column number.</inlineHelpText>
    <label>Mass Recipient Report</label>
    <type>Text</type>
</CustomField>