force-app/main/default/objects/Loop__DDP__c/fields/Loop__Object_Name_Link__c.field-meta.xml
<CustomField>
    <fullName>Loop__Object_Name_Link__c</fullName>
    <formula>IF( ISBLANK( Loop__Object_Name__c ) , &quot;None&quot; , Loop__Object_Name__c ) &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpEdit?type=objectname&amp;ddpId=&quot; &amp; Id, &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot;</formula>
    <label>Object Name</label>
    <type>Text</type>
</CustomField>