force-app/main/default/objects/Loop__DDP__c/fields/Loop__Output__c.field-meta.xml
<CustomField>
    <fullName>Loop__Output__c</fullName>
    <label>Document Output Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>Originals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>