force-app/main/default/objects/Loop__DDP__c/fields/Loop__Output_Filename__c.field-meta.xml
<CustomField>
    <fullName>Loop__Output_Filename__c</fullName>
    <defaultValue>&quot;File&quot;</defaultValue>
    <inlineHelpText>This is the name for the DocGen Package output file. Use the Field Tagger to make this dynamic. Examples: &quot;Quote &lt;&lt;Opportunity_Quote_Num&gt;&gt;&quot; or &quot;&lt;&lt;Account_Name&gt;&gt; Proposal&quot;.</inlineHelpText>
    <label>Output Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>