force-app/main/default/objects/Loop__DDP__c/fields/Loop__RelatedObjects__c.field-meta.xml
<CustomField>
    <fullName>Loop__RelatedObjects__c</fullName>
    <description>This is a semicolon delimited list of object API names (and optionally the parent API name separated by a comma) that have a custom relationship with an included (standard or originating) object. Example: &quot;Custm_Obj1__c; Custm_Obj2__c, Account&quot;</description>
    <inlineHelpText>This field has been deprecated. Use the Related Object list instead. (Values in this field will overwrite the Related Object list.)</inlineHelpText>
    <label>Related Objects (Deprecated)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>