force-app/main/default/objects/Loop__DDP__c/fields/Loop__ReportStatus__c.field-meta.xml
<CustomField>
    <fullName>Loop__ReportStatus__c</fullName>
    <formula>IF( Loop__IsActive__c , &quot;Active&quot; , &quot;Not Active&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>