force-app/main/default/objects/Loop__DDP__c/fields/Loop__Security__c.field-meta.xml
<CustomField>
    <fullName>Loop__Security__c</fullName>
    <defaultValue>IF( $RecordType.Name = &#39;Report&#39;, &quot;&#39;&quot; &amp; $User.Id &amp; &quot;&#39;&quot; , &quot;&#39;&quot; &amp; $User.ProfileId &amp; &quot;&#39;&quot; )</defaultValue>
    <description>List of Profile, Role, Contact, and or User Ids associated with a DocGen Package.</description>
    <label>Security</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>