force-app/main/default/objects/Loop__DDP__c/fields/Loop__Skip_AdHoc_Processing__c.field-meta.xml
<CustomField>
    <fullName>Loop__Skip_AdHoc_Processing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Select this checkbox to prevent the processing of ad hoc files that were selected at run time.</description>
    <label>Skip AdHoc Processing</label>
    <type>Checkbox</type>
</CustomField>