force-app/main/default/objects/Loop__DDP__c/recordTypes/Loop__Case.recordType-meta.xml
<RecordType>
    <fullName>Loop__Case</fullName>
    <active>true</active>
    <description>DocGen Package will be available from a Case only</description>
    <label>Case</label>
</RecordType>