force-app/main/default/objects/Loop__DDP__c/recordTypes/Loop__Contact.recordType-meta.xml
<RecordType>
    <fullName>Loop__Contact</fullName>
    <active>true</active>
    <description>DocGen Package will be available from a Contact only</description>
    <label>Contact</label>
</RecordType>