force-app/main/default/objects/Loop__DDP__c/recordTypes/Loop__Custom_Object.recordType-meta.xml
<RecordType>
    <fullName>Loop__Custom_Object</fullName>
    <active>true</active>
    <description>DocGen Package will be available from a custom object only</description>
    <label>Custom Object</label>
</RecordType>