force-app/main/default/objects/Loop__DDP__c/recordTypes/Loop__Form.recordType-meta.xml
<RecordType>
    <fullName>Loop__Form</fullName>
    <active>true</active>
    <description>DocGen Package will be available as a form</description>
    <label>Form</label>
</RecordType>