force-app/main/default/objects/Loop__DDP__c/recordTypes/Loop__Nintex_Form.recordType-meta.xml
<RecordType>
    <fullName>Loop__Nintex_Form</fullName>
    <active>false</active>
    <description>DocGen Package will be available only for Nintex Forms</description>
    <label>Nintex Form (Deprecated)</label>
</RecordType>