force-app/main/default/objects/Loop__DDP__c/recordTypes/Loop__Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Loop__Opportunity</fullName>
    <active>true</active>
    <description>DocGen Package will be available from an Opportunity only</description>
    <label>Opportunity</label>
</RecordType>