force-app/main/default/objects/Loop__DDP__c/listViews/Loop__All.listView-meta.xml
<ListView>
    <fullName>Loop__All</fullName>
    <columns>NAME</columns>
    <columns>Loop__Object_Name__c</columns>
    <columns>Loop__Description__c</columns>
    <columns>Loop__Filter__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Loop__IsActive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>OLD</value>
    </filters>
    <label>All</label>
</ListView>